Update and rename 2019-12-06-basic-principle-of-oop.md to 2019-12-06-basic-oop.md

--- a/_posts/2019-12-06-basic-oop.md
+++ b/_posts/2019-12-06-basic-oop.md
@@ -1,6 +1,6 @@
 ---
 layout: post    
-title:  "Basic principle of OOP"
+title:  "Basic OOP"
 date:   2019-12-06 09:23:42 +0100
 categories: oop
 ---
